overflow-x fix and other pages navbar error fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,8 @@ body {
 	background: url("../img/bg.webp") no-repeat center center;
 	background-size: cover;
 	backdrop-filter: blur(5px);
+
+	overflow-x: hidden;
 }
 
 a {
